white space at bottom repair

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,3 +1,7 @@
+
+body{
+  background-image: linear-gradient(to right, #1b1b1b, #2e2e2e);
+}
 .App {
   text-align: center;
   background-image: linear-gradient(to right, #1b1b1b, #2e2e2e);
